[package]
name = "deltachat-neon"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

edition = "2018"

[lib]
name = "deltachat_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = {git = "https://github.com/aep/neon", branch = "375" } # "0.3.1"
deltachat = {git = "https://github.com/deltachat/deltachat-core-rust"}
libc = "0.2.62"
lazy_static = "1.4.0"
