[package]
name = "deltachat-neon"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

edition = "2018"

[lib]
name = "deltachat_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = { git = "https://github.com/neon-bindings/neon", branch = "master" } 

[dependencies]
neon = {git = "https://github.com/neon-bindings/neon", branch = "master", features = ["event-handler-api"] }
deltachat = {git = "https://github.com/deltachat/deltachat-core-rust"}
libc = "0.2.62"
lazy_static = "1.4.0"
